# alquran_database

./: Cargo.toml
db/: alquran_surah_202506131958.sql
src/: main.rs
