[package]
name = "quran_json_mapper"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8.6", features = ["postgres", "runtime-async-std","runtime-async-std-rustls"] }
tokio = { version = "1", features = ["full"] }